Fix image stretching

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -156,6 +156,7 @@
 
   .cardImage {
     position: unset;
+    align-items: center;
     order: -1;
   }
 
